--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
             <li class="lnb1"><a href="#">퍼블리싱 규칙</a>
                 <ul class="menu-lnb__sub">
                     <li><a href="directory.html" >디렉토리 구성</a></li>
-                    <li><a href="global_set.html" >마크업 지침</a></li>
+                    <li><a href="global_set.html" >마크업 규칙</a></li>
                     <li><a href="makup.html" >마크업구조</a></li>
                     <li><a href="css_guide.html" >네이밍규칙</a></li>
                 </ul>
@@ -27,7 +27,7 @@
                     <li><a href="class-namning.html">정의된 예약어(클래스명) </a></li>
                  </ul>
             </li>
-            <li class="lnb2"><a href="uio.html">CSS 템플렛</a>
+            <li class="lnb2"><a href="uio.html">CSS 엘리먼트</a>
                 <ul class="menu-lnb__sub">
 					<li><a href="uio.html#button-sect">버튼</a></li>
                     <li><a href="uio.html#table-sect">table</a></li>
@@ -46,11 +46,20 @@
 
                 </ul>
             </li>
-            <li class="lnb3"><a href="check_list.html">필수체크사항</a></li>
-            <li class="lnb3"><a href="self-check.html" >웹접근성 셀프체크</a></li>
-            <li class="lnb3"><a href="모바일애플리케이션_가이드라인_웹와치(주)(0).pdf" >모바일 웹접근성</a></li>
-            <li class="lnb3"><a href="Z:\8.퍼블리싱\2.자료실" >기타 자료실</a></li>
+            <li class="lnb3"><a href="check_list.html">웹접근성</a>
+                <ul class="menu-lnb__sub">
+                    <li><a href="check_list.html">필수체크사항(담당자)</a></li>
+                    <li class="lnb3"><a href="self-check.html" >웹접근성 셀프체크(담당자)</a></li>
+                    <li class="lnb3"><a href="work_flow.html" >업무별체크(디,개)</a></li>
+                    <li class="lnb3"><a href="wa_role.html" >기본명칭 정의</a></li>
+                    <li class="lnb3"><a href="mo_wa.html" >모바일 웹접근성</a></li>            
+                    <li class="lnb3"><a href="Z:\8.퍼블리싱\2.자료실" >기타 자료실</a></li>
+                </ul>           
+            
+            </li>
+
             <!-- <li><a href="#" >기본템플릿 다운로드</a></li>     -->
-			<li><a href="markup.html" style="background:#650f35;">퍼블리싱 리스트 <img src="images/window.png"  alt=""></a></li>
+            <li><a href="markup.html" style="background:#650f35;">퍼블리싱 워크리스트 t1 <img src="images/window.png"  alt=""></a></li>
+            <li><a href="indexpage.html" style="background:#650f35;">퍼블리싱 워크리스트 t2 <img src="images/window.png"  alt=""></a></li>
         </ul>
     </div>
