--- a/js_uio.html
+++ b/js_uio.html
@@ -157,11 +157,19 @@
 							<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
 
-						<h2 id="dropdown-sect">토글/드랍다운</h2>
+						<h2 id="dropdown-sect">드랍다운</h2>
 							<p class="codepen" data-height="265" data-theme-id="default" data-default-tab="css,result" data-user="honghao30" data-slug-hash="WNbXoGN" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="nav">
 								<span>See the Pen <a href="https://codepen.io/honghao30/pen/WNbXoGN"> nav</a> by honghao30 (<a href="https://codepen.io/honghao30">@honghao30</a>) on <a href="https://codepen.io">CodePen</a>.</span>
 							</p>
 							<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+
+							<h2>토글 레이어</h2>
+							<p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="js,result" data-user="honghao40" data-slug-hash="XWJPKpL" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="토글 열리고 닫히기">
+								<span>See the Pen <a href="https://codepen.io/honghao40/pen/XWJPKpL">
+								토글 열리고 닫히기</a> by hsh@itgood.co.kr (<a href="https://codepen.io/honghao40">@honghao40</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+							  </p>
+							  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
 
 						<h2 id="tab-sect">탭</h2>
@@ -201,14 +209,26 @@
 							<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
 
-						<h2 id="modal-sect">모달</h2>
-							<p class="codepen" data-height="265" data-theme-id="default" data-default-tab="js,result" data-user="honghao30" data-slug-hash="PowRzBY" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="모달">
-							<span>See the Pen <a href="https://codepen.io/honghao30/pen/PowRzBY">
-							모달</a> by honghao30 (<a href="https://codepen.io/honghao30">@honghao30</a>)
-							on <a href="https://codepen.io">CodePen</a>.</span>
-							</p>
-							<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
+
+
+						  <h2 id="modal-sect">모달</h2>
+						  <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="js,result" data-user="honghao40" data-slug-hash="jOEvrZX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="대중적인 모달방식">
+							<span>See the Pen <a href="https://codepen.io/honghao40/pen/jOEvrZX">
+							대중적인 모달방식</a> by hsh@itgood.co.kr (<a href="https://codepen.io/honghao40">@honghao40</a>)
+							on <a href="https://codepen.io">CodePen</a>.</span>
+						  </p>
+						  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>	
+						  
+						  버튼에 직접 onclick 이 피룡할때
+						  <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="honghao40" data-slug-hash="PowdzKO" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="모달 ajax로 데이타를 돌릴때">
+							<span>See the Pen <a href="https://codepen.io/honghao40/pen/PowdzKO">
+							모달 ajax로 데이타를 돌릴때</a> by hsh@itgood.co.kr (<a href="https://codepen.io/honghao40">@honghao40</a>)
+							on <a href="https://codepen.io">CodePen</a>.</span>
+						  </p>
+						  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>						  
+  
+  
 
 
 		</div>
