--- a/directory.html
+++ b/directory.html
@@ -68,6 +68,16 @@
 								<li><strong class="paper pointGn">sub.css</strong> : 컨텐츠관련 css</li>
 							</ul>						
 						</li>
+                        <li><strong class="folder pointBl">scss</strong> : scss 
+							<ul class="treeset clfix">								
+								<li><strong class="paper pointGn">itg.scss</strong> :  전역에 영향을 미치고 공통적으로 정의가 필요한 부분</li>
+								<li><strong class="paper pointGn">layout.scss</strong> : 모든 레이아웃 scss</li>
+								<li><strong class="paper pointGn">sub.scss</strong> : 컨텐츠관련 scss</li>
+								<li><strong class="paper pointGn">_variables.scss</strong> : 컴퍼넌트별 scss</li>
+								<li><strong class="paper pointGn">_minxin.scss</strong> : 컴퍼넌트별 scss</li>
+								<li><strong class="paper pointGn">_board.scss</strong> : 컴퍼넌트별 scss</li>
+							</ul>						
+						</li>						
 						<li><strong class="folder pointBl">img</strong> : 이미지파일 
 							<ul class="treeset clfix">
 								<li><strong class="folder pointGn">com</strong> : 공통이미지  </li>
