--- a/check_list.html
+++ b/check_list.html
@@ -107,7 +107,8 @@
 					모든 퍼블리싱 산출물은 완벽함을 추구해야 하나 프로젝트 일정의 영향을 받게 되지만 이하 순서대로 필수 체크를 해야 한다.<br>
 					1) 개발이후 수정시 개발자의 일정에 영향을 주는 항목들은 완성도를 높혀야 한다.<br>
 					2) 개발진행중 수정반영할 경우 개발자의 일정에 영향을 받지 않는 항목들은 일정상 후순위로 처리할수 있다.<br>
-					   예) css로 수정하는 부분들,기능구현에 영향주지 않는 js수정
+					   예) css로 수정하는 부분들,기능구현에 영향주지 않는 js수정<br>
+					  웹접근성은 IE11기준으로 점검합니다.
 				</p>
 
 				<h2>퍼블리싱 작업시 필수 체크해야 하는 항목들</h2>
