--- a/header.html
+++ b/header.html
@@ -29,6 +29,7 @@
             </li>
             <li class="lnb2"><a href="uio.html">CSS 엘리먼트</a>
                 <ul class="menu-lnb__sub">
+                    <li><a href="typography.html">타이포그래프</a></li>
 					<li><a href="uio.html#button-sect">버튼</a></li>
                     <li><a href="uio.html#table-sect">table</a></li>
 					<li><a href="uio.html#form-sect">폼요소</a></li>
@@ -36,6 +37,9 @@
 					<li><a href="uio.html#board-sect">유형별 게시판</a></li>
                 </ul>
             </li>
+            <li class="lnb2"><a href="scss.html">SCSS 정의</a>
+
+            </li>            
             <li class="lnb2"><a href="js_uio.html">스크립트</a>
                 <ul class="menu-lnb__sub">
                     <li><a href="js_uio.html#nav-sect">네비게이션</a></li>
@@ -43,7 +47,6 @@
                     <li><a href="js_uio.html#slide-sect">슬라이드</a></li>
                     <li><a href="js_uio.html#family-sect">패밀리사이트</a></li>
                     <li><a href="js_uio.html#modal-sect">모달</a></li>
-
                 </ul>
             </li>
             <li class="lnb3"><a href="check_list.html">웹접근성</a>
