--- a/self-check.html
+++ b/self-check.html
@@ -103,6 +103,7 @@
 	</div>
 	<div  id="content" class="cont">
         <h2>퍼블리싱 체크리스트</h2>
+        <p>웹접근성은 IE11기준으로 점검합니다.</p>
         <table  class="table_style" width="100%">
                 <colgroup>
                 <col width="14%">
