--- a/work_flow.html
+++ b/work_flow.html
@@ -104,7 +104,7 @@
 
 	</div>
 	<div  id="content" class="cont">
-
+        <p>웹접근성은 IE11기준으로 점검합니다.</p>
 		<h2>디자인 점검사항</h2>
         <div class="">
             <table class="table table_style">
@@ -150,10 +150,9 @@
             <col style="width:80px">
             </colgroup>
             <tbody>
-                <tr>
-                    <th>웹브라우저 제목</th>
+                <th>웹브라우저 제목</th>
                     <td>웹브라우저의 제목으로 페이지 고유의 제목이 표시되는가?</td>
-                    <td>2-4-2/td>
+                    <td>2-4-2</td>
                 </tr>
 
                 <tr>
@@ -165,7 +164,7 @@
                 <tr>
                     <th rowspan="5">초점의 이동</th>
                     <td>키보드만으로 페이지의 모든 내용에 접근이 가능한가?</td>
-                    <td>2-1-1/td>
+                    <td>2-1-1 </td>
                 </tr>
                 <tr>
                     <td>키보드만으로 셀렉트박스와 라디오버튼, 체크박스의 값을 정상적으로 선택할 수 있는가?</td>
@@ -215,7 +214,7 @@
 
             <h2>CMS등록 컨텐츠 점검사항</h2>     
             <div class="g-tbl-type1">
-                <table   class="table table_style">
+                <table  class="table table_style">
                 <colgroup>
                 <col style="width:150px">
                 <col style="width:auto">
