--- a/button.html
+++ b/button.html
@@ -15,7 +15,7 @@
         <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>		
         <script src="js/asidebar.jquery.js"></script>              	
-        <link rel="stylesheet" href="css/layout.css">  
+        <link rel="stylesheet" href="../basic_set/src/css/layout.css">  
 		 <script src="js/asidebar.jquery.js"></script>
         <!-- 1. core style sheet : 필수 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css">        
