--- a/class-namning.html
+++ b/class-namning.html
@@ -148,7 +148,11 @@
                 <tr>
                     <td>paging,paginate</td>
                     <td>페이징 </td>
-                </tr>                
+                </tr>   
+                <tr>
+                    <td>.pagetit-h1, pagetit-h2, pagetit-h3,pagetit-h4,pagetit-h5,pagetit-h6</td>
+                    <td>페이지 제목 </td>
+                </tr>                              
             </tbody>
         </table>
 
