--- a/header.html
+++ b/header.html
@@ -37,8 +37,10 @@
 					<li><a href="uio.html#board-sect">유형별 게시판</a></li>
                 </ul>
             </li>
-            <li class="lnb2"><a href="scss.html">SCSS 정의</a>
-
+            <li class="lnb2"><a href="guide_scss.html">SCSS 정의</a>
+                <ul class="menu-lnb__sub">
+                    <li><a href="mixin.html">@mixin 검색</a></li>
+                 </ul>
             </li>            
             <li class="lnb2"><a href="js_uio.html">스크립트</a>
                 <ul class="menu-lnb__sub">
