--- a/typography.html
+++ b/typography.html
@@ -15,7 +15,9 @@
         <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script src="js/asidebar.jquery.js"></script>
+        <link rel="stylesheet" href="basic_set/src/css/reset.css">
         <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="basic_set/src/css/itg.css">
         <script type="text/javascript">
             $(document).ready(function(){
                 $(".navigation li").click(function(){
@@ -41,14 +43,28 @@
 	<div id="nav">
 
 	</div>
-	<div  id="content" class="cont">
+	<div  id="content" class="cont2">
         <div class="typograp-wrap">
-            <h1>스타일 가이드 제목 스타일</h1>
-            <h2>스타일 가이드 제목 스타일</h2>
-            <h3>스타일 가이드 제목 스타일</h3>
-            <h4>스타일 가이드 제목 스타일</h4>
-            <h5>스타일 가이드 제목 스타일</h5>
-            <h6>스타일 가이드 제목 스타일</h6>
+            <h1 class="pagetit-h1">스타일 가이드 제목 스타일 .pagetit-h1 </h1>
+            <h2 class="pagetit-h2">스타일 가이드 제목 스타일 .pagetit-h2 </h2>
+            <h3 class="pagetit-h3">스타일 가이드 제목 스타일 .pagetit-h3 </h3>
+            <h4 class="pagetit-h4">스타일 가이드 제목 스타일 .pagetit-h4 </h4>
+            <h5 class="pagetit-h5">스타일 가이드 제목 스타일 .pagetit-h5 </h5>
+            <h6 class="pagetit-h6">스타일 가이드 제목 스타일 .pagetit-h6 </h6>
+
+            <h4 class="pagetit-h4">스타일 가이드 제목 스타일 .pagetit-h4 </h4>
+            <div class="box">
+                클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자 클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자.box 이며 텍스트상자클래스명이 .box 이며 텍스트상자
+            </div>
+            <ul class="list-ul">
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+                <li>클래스명이 list-ul 인 파일들 클래스명이 list-ul 인 파일들</li>
+            </ul>
         </div>
 	</div>
 </div>
