--- a/uio.html
+++ b/uio.html
@@ -15,9 +15,9 @@
         <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="basic_set/src/css/reset.css">
         <link rel="stylesheet" href="css/layout.css">
-		<link rel="stylesheet" href="css/itg.css">
+		<link rel="stylesheet" href="basic_set/src/css/itg.css">
         <!-- 1. core style sheet : 필수 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css">
         <!-- 2. theme style sheet : 택1 -->
