--- a/header.html
+++ b/header.html
@@ -37,8 +37,10 @@
 					<li><a href="uio.html#board-sect">유형별 게시판</a></li>
                 </ul>
             </li>
-            <li class="lnb2"><a href="guide_scss.html">SCSS 정의</a>
+            <li class="lnb2"><a href="guide_scss.html">SCSS </a>
                 <ul class="menu-lnb__sub">
+                    <li><a href="guide_scss.html">정의 및 환경</a></li>
+                    <li><a href="scss_variables.html">전역변수</a></li>
                     <li><a href="mixin.html">@mixin 검색</a></li>
                  </ul>
             </li>            
