--- a/index.html
+++ b/index.html
@@ -49,16 +49,9 @@
 				<img src="images/sass.gif" alt="">
 			</div>
 
-			<div style="font-size:20px;text-align:center;">
-				<strong style="font-size:25px;">제작자</strong><br>
-				2019
-				홍성호, 윤혜림, 송아선, 김우성, 박현민, 류주현
-			</div>
-
 			<div class="text" style="margin-top:20px;">
-				ITG Markup Convention에 따른 기본 셋팅이 되어 있는 폴더입니다.<br>
-				내부 작업자 및 외부 작업자 모두 새로운 프로젝트를 시작할 때 이 파일을 다운로드 하여 사용해주시기 바랍니다.
-				<a href="basic_set.zip" style="font-weight:700;text-decoration:underline;">basic_set 다운로드</a>
+				Markup Convention은 마크업 개발을 위한 전체적인 정책,정의,라이브러리이빈다.
+				<!-- <a href="basic_set.zip" style="font-weight:700;text-decoration:underline;">basic_set 다운로드</a> -->
 			</div>
 
 	</div>
