--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="text" style="margin-top:20px;">
-				Markup Convention은 마크업 개발을 위한 전체적인 정책,정의,라이브러리이빈다.
+				Markup Convention은 마크업 개발을 위한 전체적인 정책,정의,라이브러리 입니다.
 				<!-- <a href="basic_set.zip" style="font-weight:700;text-decoration:underline;">basic_set 다운로드</a> -->
 			</div>
 
