--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div id="head">
-			<h1><a href="index.html">Markup Team Convention(v1.3)</a></h1>
+			<h1><a href="index.html">Markup Convention(v1.3)</a></h1>
 			<button type="button" class="btn_mobile"  onclick="$('.aside').asidebar('open')">
 				<span class="sr-only"></span>
 				<span class="icon-bar"></span>
