--- a/header.html
+++ b/header.html
@@ -61,7 +61,7 @@
                     <li class="lnb3"><a href="work_flow.html" >업무별체크(디,개)</a></li>
                     <li class="lnb3"><a href="wa_role.html" >기본명칭 정의</a></li>
                     <li class="lnb3"><a href="mo_wa.html" >모바일 웹접근성</a></li>            
-                    <li class="lnb3"><a href="Z:\8.퍼블리싱\2.자료실" >기타 자료실</a></li>
+                    <li class="lnb3"><a href="https://blog.naver.com/jinhaiyuren/221802095843" target="_blank">기타 자료실</a></li>
                 </ul>           
             
             </li>
