--- a/basic.html
+++ b/basic.html
@@ -44,7 +44,7 @@
 	<div  id="content" class="cont">
 
             <h2>목적</h2>
-            <p class="text">본 가이드는 ITGOOD 퍼블리싱 가이드문서이며 이하 ITG가이드라 한다.  
+            <p class="text">본 가이드는 퍼블리싱 가이드문서이며 이하 MKG라 한다.  
                     고객사 및 개발팀의 요청사항을 제외한 모든 퍼블리싱 작업은 이 문서의 기준으로 진행한다.<br>
                 외주 인력을 투입시에  본 문서를 기준으로 한다.
             </p>
