--- a/header.html
+++ b/header.html
@@ -40,6 +40,7 @@
             <li class="lnb2"><a href="guide_scss.html">SCSS </a>
                 <ul class="menu-lnb__sub">
                     <li><a href="guide_scss.html">정의 및 환경</a></li>
+                    <li><a href="sass_rull.html">코딩규칙</a></li>
                     <li><a href="scss_variables.html">전역변수</a></li>
                     <li><a href="mixin.html">@mixin 검색</a></li>
                  </ul>
